# tftcore

./: CMakeLists.txt  LICENSE  README.md  bindings.cpp  pyproject.toml  test.py
include/: tensor.h
nnets/: Linear.h
nnets/optimizers/: AdamWOptimizer.h
src/: autograd.cpp  tensor.cpp
