[build-system]
requires = ["scikit-build-core>=0.5", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "peped"
version = "0.1.0"
description = "C++ tensor and autograd library with reverse-mode autodiff"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.scikit-build]
cmake.build-type = "Release"
